--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,13 +6,11 @@
 
 <h1>Contact information</h1>
 
-<p>Admonymous is maintained by <a href="mailto:eloise.rosen@gmail.com">Eloise Rosen</a> 
+<p>Admonymous is maintained by <a href="mailto:eloise.rosen+admonymous@gmail.com">Eloise Rosen</a> 
 	(<a href="http://www.admonymous.com/eloise">anonymously admonish and admire</a>).
 </p>
 
-<p>Admonymous was originally conceived and created by:<br/><br/>
-  <a href="mailto:yonidonner@gmail.com">Yoni Donner</a> (<a href="http://www.admonymous.com/yoni">anonymously admonish and admire</a>) and <br/>
-  <a href="mailto:nevin.freeman@gmail.com">Nevin Freeman</a> (<a href="http://www.admonymous.com/nevin">anonymously admonish and admire</a>).
+<p>Admonymous was originally conceived and created by <a href="mailto:yonidonner@gmail.com">Yoni Donner</a> (<a href="http://www.admonymous.com/yoni">anonymously admonish and admire</a>) and <a href="mailto:nevin.freeman@gmail.com">Nevin Freeman</a> (<a href="http://www.admonymous.com/nevin">anonymously admonish and admire</a>).
 </p>
 
 <p>Leave feedback by <a href="http://www.admonymous.com/feedback">leaving an admonition or admiration for Admonymous itself!</a></p> 
