--- a/templates/topmenu.html
+++ b/templates/topmenu.html
@@ -5,7 +5,7 @@
   <div style="height:78px;padding:19px 32px 0 22px;">
     <div style="float:left;">
       <h2>{{ user.name }} ({{ user.username }})</h2>
-      <a href="/">My admonitions</a> | <a href="/{{ user.username }}">My public page</a> | <a href="/print" target="_new">Print an announcement</a> | <a href="/crash_course">Crash course</a> | <a href="/contact">Contact</a> | <a href="http://blog.admonymous.com/">Blog</a> | <a href="/logout">Log out</a>
+      <a href="/">My admonitions</a> | <a href="/{{ user.username }}">My public page</a> | <a href="/print" target="_new">Print an announcement</a> | <a href="/suggestions">Suggestions and FAQ</a> | <a href="/contact">Contact</a> | <a href="/logout">Log out</a>
     </div>
     <div style="float:right;text-align:right;">
       <a href="/"><img src="/static/images/Admonymous_logo.png" width="288" height="45" style="margin:20px 0 0 0;"/></a>
@@ -17,7 +17,7 @@
       <a href="/"><img src="/static/images/Admonymous_logo.png" width="288" height="45"/></a>
     </div>
     <div style="float-left;width:400px;margin:20px 0 0 0">
-      <a href="/">Home</a> | <a href="/crash_course">Crash course</a> | <a href="/contact">Contact</a> | <a href="http://blog.admonymous.com/">Blog</a> | <a href="/login" target="_blank">Log in</a>
+      <a href="/">Home</a> | <a href="/suggestions">Suggestions and FAQ</a> | <a href="/contact">Contact</a>  | <a href="/login" target="_blank">Log in</a>
     </div>
   </div>
   {% endif %}
