--- a/templates/home.html
+++ b/templates/home.html
@@ -41,7 +41,7 @@
         &ldquo;The sound you make when you enjoy your food is adorable, but probably not working for you during business lunches.&rdquo;
       </div>
       <div class="span5">
-        &ldquo;You&rsquo;ve said so many times that it's important to you not to skip Physics class, but you weren&rsquo;t there again today &ndash; this is just a heads up to keep you thinking!&rdquo;
+        &ldquo;You&rsquo;ve said so many times that it is important to you not to skip Physics class, but you weren&rsquo;t there again today &ndash; this is just a heads up to keep you thinking!&rdquo;
       </div>
       <div class="span4">
         &ldquo;I really appreciated your new approach to keeping the group on track today, stick with it!&rdquo;
