change to .co domain

--- a/templates/_email/_flakes/generic_header.html
+++ b/templates/_email/_flakes/generic_header.html
@@ -2,7 +2,7 @@
 	<tr><td height="10"></td></tr>
 	<tr>
 		<td align="center" width="615">
-			<a href="http://www.admonymous.com"><img src="http://www.admonymous.com/static/images/Admonymous_logo.png" id="logo" alt="Admonymous"  width="288" height="45"/></a>
+			<a href="http://www.admonymous.co"><img src="http://www.admonymous.co/static/images/Admonymous_logo.png" id="logo" alt="Admonymous"  width="288" height="45"/></a>
 		</td>
 	</tr>
 </table>
