--- a/templates/_email/notification.html
+++ b/templates/_email/notification.html
@@ -6,7 +6,7 @@
 		<td>
 			<font face="Helvetica, Arial, Sans Serif, sans-serif" style="font-size: 12px;">
 				<p>Hi{% if target_user.name %} {{ target_user.name }}{% endif %},</p>
-				<p><strong>{% if author %}{{ author }}{% else %}Someone{% endif %} just left you a response on <a href="http://www.admonymous.com">Admonymous.com</a>:</strong></p>
+				<p><strong>{% if author %}{{ author }}{% else %}Someone{% endif %} just left you a response on <a href="http://www.admonymous.co">Admonymous.co</a>:</strong></p>
 				<blockquote>
 					{{ body_html }}
 				</blockquote>
