old links and old file

--- a/templates/home.html
+++ b/templates/home.html
@@ -94,9 +94,9 @@
           You don't have any admonitions yet. <br/>
 
           Your URL is:<br/>
-          <pre style="margin:10px 0;"><a href="http://www.admonymous.co/{{ user.username }}">http://www.admonymous.co/{{ user.username }}</a></pre>
+          <pre style="margin:10px 0;"><a href="https://www.admonymous.co/{{ user.username }}">https://www.admonymous.co/{{ user.username }}</a></pre>
 
-          You can print <a href="/print" target="_new">this announcement</a>, or ask for feedback online: <a target="twitter" href="http://twitter.com/home?status=Soliciting constructive criticism: http://www.admonymous.co/{{ user.username }}">Solicit constructive criticism via Twitter</a>
+          You can print <a href="/print" target="_new">this announcement</a>, or ask for feedback online: <a target="twitter" href="http://twitter.com/home?status=Soliciting constructive criticism: https://www.admonymous.co/{{ user.username }}">Solicit constructive criticism via Twitter</a>
         </div>
       {% endif %}
     </div>
