--- a/templates/_email/base.html
+++ b/templates/_email/base.html
@@ -43,7 +43,7 @@
   				<tr>
   					<td align="center" width="615">
   						<font face="Helvetica, Arial, Sans Serif, sans-serif">
-  							Sent by <a href="http://www.admonymous.co">admonymous.co</a>.
+  							Sent by <a href="https://www.admonymous.co">admonymous.co</a>.
   						</font>
   					</td>
   				</tr>
