remove reference to old account I dont have access to

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -13,7 +13,7 @@
 <p>Admonymous was originally conceived and created by <a href="mailto:yonidonner@gmail.com">Yoni Donner</a> (<a href="https://www.admonymous.co/yoni">anonymously admonish and admire</a>) and <a href="mailto:nevin.freeman@gmail.com">Nevin Freeman</a> (<a href="https://www.admonymous.co/nevin">anonymously admonish and admire</a>).
 </p>
 
-<p>Leave feedback by <a href="https://www.admonymous.co/feedback">leaving an admonition or admiration for Admonymous itself!</a></p> 
+<p>Leave feedback by <a href="https://www.admonymous.co/admonymous_feedback">leaving an admonition or admiration for Admonymous itself!</a></p>
 
 </div>
 
