--- a/templates/home.html
+++ b/templates/home.html
@@ -57,7 +57,7 @@
 
       <p>Constructive criticism is beneficial to both giver and recipient, but the fact that people often can't deliver negative (and sometimes positive!) feedback without social risk discourages the behavior.</p>
 
-      <p>Admonymous allows people to anonymously admonish and admire their friends and acquaintances. All you need to do in order to let others admonish and admire you is <a href="/login" target="_blank">sign up</a> and publish the admonition link where people can see it, like in your email signature or on your Faceboook account. By becoming aware of your blind spots, you will be more able to address them.</p>
+      <p>Admonymous allows people to anonymously admonish and admire their friends and acquaintances. All you need to do in order to let others admonish and admire you is <a href="/login" target="_blank">sign up</a> and publish the admonition link where people can see it, like in your email signature or on your Facebook account. By becoming aware of your blind spots, you will be more able to address them.</p>
 
       <p>Giving and receiving good feedback isn't easy. For some suggestions, take a look at our <a href="/suggestions" target="_new">Suggestions and FAQ</a>.</p>
     </div>
