--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,6 +15,8 @@
 
 <p>Leave feedback by <a href="https://www.admonymous.co/admonymous_feedback">leaving an admonition or admiration for Admonymous itself!</a></p>
 
+<p>If you'd like to help cover the cost of keeping Admonymous running, you can donate <a href="https://www.buymeacoffee.com/eloiserosen">here</a>.</p>
+
 </div>
 
 {% endblock %}
