--- a/templates/_email/notification.html
+++ b/templates/_email/notification.html
@@ -11,6 +11,7 @@
 					{{ body_html }}
 				</blockquote>
 				<p><strong><a href="{{ host_url }}/">Click here to see all of your responses</a>.</strong></p>
+				<p>If you'd like to help cover Admonymous' hosting fees, you can donate <a href="https://www.buymeacoffee.com/eloiserosen">here</a>.</p>
 			</font>
 		</td>
 	</tr>
