expand FAQ section

--- a/templates/suggestions.html
+++ b/templates/suggestions.html
@@ -88,6 +88,13 @@ return false;
 {% if not topic or "faq" in topic %}
 
 <a name="faq"><h2>Frequently Asked Questions</h2></a>
+<p>
+<strong>What is Admonymous?</strong>
+<br/>
+As a feedback-receiver: Admonymous provides you with a URL through which you can receive anonymous feedback via a text box. The feedback you've received is visible only to you, when you are signed in.
+<br/>
+As a feedback-giver: You can leave anonymous feedback for someone through their Admonymous page, assuming they've set up a page and shared the link.
+</p>
 
 <p>
 <strong>Do I have to sign up to use the site?</strong>
@@ -99,6 +106,12 @@ No. You have to sign up if you want to get your own URL and receive admonitions,
 <strong>Why do you ask me to sign in using my Google account?</strong>
 <br/>
 This is done purely for authentication, and uses an external authentication through Google so we never get access to your Google credentials. By verifying that you have a real Google account and associating it with your Admonymous account, we discourage potential site abuse (one person signing up multiple times).
+</p>
+
+<p>
+<strong>What happens to my data?</strong>
+<br/>
+Your data is not sold. You can also delete any individual feedback you've received, or your whole account. 
 </p>
 
 <p>
