--- a/templates/suggestions.html
+++ b/templates/suggestions.html
@@ -111,7 +111,7 @@ This is done purely for authentication, and uses an external authentication thro
 <p>
 <strong>What happens to my data?</strong>
 <br/>
-Your data is not sold. You can also delete any individual feedback you've received, or your whole account. 
+Your data is not sold or shared with any third party. You can also delete any individual feedback you've received, or your whole account. 
 </p>
 
 <p>
