--- a/templates/suggestions.html
+++ b/templates/suggestions.html
@@ -91,7 +91,7 @@ return false;
 <p>
 <strong>What is Admonymous?</strong>
 <br/>
-As a feedback-receiver: Admonymous provides you with a URL through which you can receive anonymous feedback via a text box. The feedback you've received is visible only to you, when you are signed in.
+As a feedback-receiver: Admonymous provides you with a link through which you can receive anonymous feedback via a text box. The feedback you've received is visible only to you, when you are signed in.
 <br/>
 As a feedback-giver: You can leave anonymous feedback for someone through their Admonymous page, assuming they've set up a page and shared the link.
 </p>
