--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
 
 <p>Admonymous is maintained by <a href="mailto:eloise.rosen+admonymous@gmail.com">Eloise Rosen</a> 
 	(<a href="https://www.admonymous.co/eloise">anonymously admonish and admire</a>).<br>
-	I pay for Admonymous' hosting fees out of pocket—if you'd like to help support the project, you can donate <a href="https://www.buymeacoffee.com/eloiserosen">here</a>.</p>
+	I pay for Admonymous' hosting fees out of pocket—if you'd like to help support the project, you can donate <a href="https://www.buymeacoffee.com/eloiserosen">here</a>.
 </p>
 
 <p>Admonymous was originally conceived and created by <a href="mailto:yonidonner@gmail.com">Yoni Donner</a> (<a href="https://www.admonymous.co/yoni">anonymously admonish and admire</a>) and <a href="mailto:nevin.freeman@gmail.com">Nevin Freeman</a> (<a href="https://www.admonymous.co/nevin">anonymously admonish and admire</a>).
