--- a/templates/topmenu.html
+++ b/templates/topmenu.html
@@ -16,7 +16,7 @@
     <div style="float:right;text-align:right;">
       <a href="/"><img src="/static/images/Admonymous_logo.png" width="288" height="45"/></a>
     </div>
-    <div style="float-left;width:400px;margin:20px 0 0 0">
+    <div style="float:left;width:400px;margin:20px 0 0 0">
       <a href="/">Home</a> | <a href="/suggestions">Suggestions and FAQ</a> | <a href="/contact">Contact</a>  | <a href="/login" target="_blank">Log in</a>
     </div>
   </div>
