--- a/templates/home.html
+++ b/templates/home.html
@@ -96,7 +96,7 @@
           Your URL is:<br/>
           <pre style="margin:10px 0;"><a href="https://www.admonymous.co/{{ user.username }}">https://www.admonymous.co/{{ user.username }}</a></pre>
 
-          You can print <a href="/print" target="_new">this announcement</a>, or ask for feedback online: <a target="twitter" href="http://twitter.com/home?status=Soliciting constructive criticism: https://www.admonymous.co/{{ user.username }}">Solicit constructive criticism via Twitter</a>
+          Ask for feedback on Twitter: <a target="twitter" href="http://twitter.com/home?status=Soliciting constructive criticism: https://www.admonymous.co/{{ user.username }}">Solicit constructive criticism via Twitter</a>
         </div>
       {% endif %}
     </div>
