update twitter post URL to the new "intent to tweet" format

--- a/templates/home.html
+++ b/templates/home.html
@@ -96,7 +96,9 @@
           Your URL is:<br/>
           <pre style="margin:10px 0;"><a href="https://www.admonymous.co/{{ user.username }}">https://www.admonymous.co/{{ user.username }}</a></pre>
 
-          Ask for feedback on Twitter: <a target="twitter" href="http://twitter.com/home?status=Soliciting constructive criticism: https://www.admonymous.co/{{ user.username }}">Solicit constructive criticism via Twitter</a>
+          If you'd like, 
+          <a target="_blank" href="https://twitter.com/intent/tweet?text=Soliciting%20anonymous%20constructive%20feedback:%20https%3A%2F%2Fwww.admonymous.co%2F{{ user.username }}">
+            solicit feedback via Twitter</a>.
         </div>
       {% endif %}
     </div>
