--- a/templates/home.html
+++ b/templates/home.html
@@ -106,11 +106,15 @@
     
 
       
-    {% if newer_offset or older_offset %}
+    {% if newer_offset is not none or older_offset is not none %}
     <div class="pagination" style="padding:0 20px;">
       <ul>
-        <li class="prev{% if not older_offset %} disabled{% endif %}"><a href="?offset={{ older_offset }}">&larr; Previous</a></li>
-        <li class="next{% if not newer_offset %} disabled{% endif %}"><a href="?offset={{ newer_offset }}">Next &rarr;</a></li>
+        <li class="prev{% if older_offset is none %} disabled{% endif %}">
+          <a{% if older_offset is not none %} href="?offset={{ older_offset }}"{% endif %}>&larr; Previous</a>
+        </li>
+        <li class="next{% if newer_offset is none %} disabled{% endif %}">
+          <a{% if newer_offset is not none %} href="?offset={{ newer_offset }}"{% endif %}>Next &rarr;</a>
+        </li>
       </ul>
     </div>
     {% else %}
